# adk_agent

./: .env.example  .gitignore  README.md  colab_agent_ETL.ipynb  pyproject.toml
PowerBI/: user_card_sales.pbix
analytics_agent/: agent.py
analytics_agent/mcp_server/: analytics.py  chain.py
data_agent/: agent.py
data_agent/mcp_server/: etl.py
data_agent/mcp_servers/: etl.py
legal_agent/: .env.example  agent.py
legal_agent/mcp_server/: chain.py  legal.py  ocr.py
